[gd_scene load_steps=15 format=3 uid="uid://bnr02xnvoiun5"]

[ext_resource type="Script" uid="uid://dh3yakhaw2or8" path="res://addons/inventory-system-demos/fps/player.gd" id="1_qhbqk"]
[ext_resource type="Script" uid="uid://chpxhifwptoga" path="res://addons/inventory-system-demos/character/hand_item_holder_3d.gd" id="2_toyi4"]
[ext_resource type="PackedScene" uid="uid://cw4rwxc3dyovc" path="res://addons/inventory-system-demos/character/character_inventory_system.tscn" id="3_hbu24"]
[ext_resource type="InventoryDatabase" uid="uid://de5qy8ycey7yn" path="res://addons/inventory-system-demos/database/database.tres" id="4_0qsek"]
[ext_resource type="AudioStream" uid="uid://n8yvnoax543q" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/cloth4.ogg" id="5_1ptxj"]
[ext_resource type="Script" uid="uid://gngi6ncgkswy" path="res://addons/inventory-system-demos/character/openable.gd" id="5_u6t8r"]
[ext_resource type="AudioStream" uid="uid://chgg2p17if5mo" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/dropLeather.ogg" id="6_3rbsy"]
[ext_resource type="AudioStream" uid="uid://df1ibxkrver3m" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/metalClick.ogg" id="7_77smm"]
[ext_resource type="AudioStream" uid="uid://djoihrfwojghx" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/bookOpen.ogg" id="8_vym5c"]
[ext_resource type="AudioStream" uid="uid://cyu1f4p35abbj" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/bookClose.ogg" id="9_su3a2"]
[ext_resource type="Script" uid="uid://cbmf3ywinq1id" path="res://addons/inventory-system-demos/fps/use_items_example.gd" id="10_mt1fm"]
[ext_resource type="Script" uid="uid://2g51nyosadfu" path="res://addons/inventory-system-demos/fps/dropper.gd" id="12_2tit8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ccrms"]

[sub_resource type="BoxMesh" id="BoxMesh_d1alo"]
size = Vector3(0.125, 0.125, 0.125)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_qhbqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ccrms")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.396227, 0)
current = true

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 16

[node name="HandItem" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.232194, -0.16177, -0.382065)
script = ExtResource("2_toyi4")

[node name="DefaultHandItem" type="MeshInstance3D" parent="Camera3D/HandItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.103376, 0, 0.154242)
mesh = SubResource("BoxMesh_d1alo")

[node name="CharacterInventorySystem" parent="." node_paths=PackedStringArray("raycast", "camera_3d") instance=ExtResource("3_hbu24")]
database = ExtResource("4_0qsek")
raycast = NodePath("../Camera3D/RayCast3D")
camera_3d = NodePath("../Camera3D")

[node name="Inventory" parent="CharacterInventorySystem" index="0"]
size = Vector2i(8, 5)
database = ExtResource("4_0qsek")

[node name="Openable" type="Node" parent="CharacterInventorySystem/Inventory" index="0"]
script = ExtResource("5_u6t8r")

[node name="EquipmentInventory" parent="CharacterInventorySystem" index="1"]
database = ExtResource("4_0qsek")

[node name="Interactor" parent="CharacterInventorySystem" index="3" node_paths=PackedStringArray("raycast", "camera")]
database = ExtResource("4_0qsek")
node_base_to_interactions = NodePath("../..")
raycast = NodePath("../../Camera3D/RayCast3D")
camera = NodePath("../../Camera3D")

[node name="ObjectPlacer" parent="CharacterInventorySystem/Interactor" index="0"]
database = ExtResource("4_0qsek")

[node name="Hotbar" parent="CharacterInventorySystem" index="4"]
max_slots = 8
auto_equip_mode = 2

[node name="UseItemsExample" type="Node3D" parent="." node_paths=PackedStringArray("hotbar")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
script = ExtResource("10_mt1fm")
hotbar = NodePath("../CharacterInventorySystem/Hotbar")

[node name="PickupAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_1ptxj")
volume_db = -30.0

[node name="DropAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_3rbsy")
volume_db = -30.0

[node name="HotbarChangeAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_77smm")
volume_db = -30.0

[node name="PlayerInventoryOpenAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_vym5c")
volume_db = -30.0

[node name="PlayerInventoryCloseAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_su3a2")
volume_db = -30.0

[node name="Dropper" type="Node3D" parent="." node_paths=PackedStringArray("inventories")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
script = ExtResource("12_2tit8")
inventories = [NodePath("../CharacterInventorySystem/Inventory")]
database = ExtResource("4_0qsek")

[editable path="CharacterInventorySystem"]
